--- a/vora.html
+++ b/vora.html
@@ -5,7 +5,7 @@ html_code = """
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Friday Assistant</title>
+    <title>Vora</title>
     <style>
         body {
             font-family: Arial, sans-serif;
